@@ -1,3 +1,9 @@
+2002-09-22  Bart Veer  <bartv@ecoscentric.com>
+
+	* host/configure.in:
+	Remove Tcl-related checks, the ethernet package only requires
+	the functionality of the architectural HAL support
+
 2002-08-07  Bart Veer  <bartv@ecoscentric.com>
 
 	* synthetic target ethernet driver package created
