@@ -1,3 +1,10 @@
+2002-09-22  Bart Veer  <bartv@ecoscentric.com>
+
+	* acinclude.m4:
+	Add the Tcl library path to ecos_LDADD (patch provided by Andrew
+	Lunn). Also add a reminder about ecos_tcl_version issues and
+	fix up Tk support.
+
 2002-08-27  Robin Farine  <robin.farine@acn-group.ch>
 
 	* acinclude.m4 (ECOS_PATH_TCL): having found tclConfig.sh in
